<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/tv_title_label"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/tv_city_label"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_temperature_label"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvFeelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_feels_like_label"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvMinMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_min_max_label"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pressure_label"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_humidity_label"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_visibility_label"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_wind_speed_label"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvWindGust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_wind_gust_label"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvWindDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_wind_direction_label"
        android:textSize="14sp" />

</LinearLayout>